01-core-concept/nginx-sample/nginx-with-secret-file.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx
  namespace: default
spec:
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: nginx
        volumeMounts:
        - name: config-volume
          mountPath: "/etc/foo"
          readOnly: true
      volumes:
      - name: config-volume
        secret:
          secretName: mysecret
